Unify parent inheritance, implement release scripts, CI workflow